Agrego un AlertDialog con las vacunas, que incluye un ScrollBar con una CheckList con las diferentes vacunas.

--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -111,7 +111,6 @@
         android:layout_width="125dp"
         android:layout_height="90dp"
         android:background="#4588BC"
-        android:onClick="Salud"
         android:text="FACTORES DE RIESGO"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
@@ -138,6 +137,7 @@
         android:layout_width="125dp"
         android:layout_height="90dp"
         android:background="#4588BC"
+        android:onClick="TiposVacuna"
         android:text="VACUNAS"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/divider2"
