--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -161,10 +161,10 @@
         android:layout_width="290dp"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:background="#4588BC"
+        android:background="#8BC34A"
         android:onClick="GuardarPersona"
         android:text="GUARDAR PERSONA"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/OBSERVACION"
         app:layout_constraintHorizontal_bias="0.472"
